--- a/style.css
+++ b/style.css
@@ -18,9 +18,11 @@ body {
 
 main {
   background: url(images/Mobile.png);
-  width: 375px;
-  height: 812px;
+    width: 100vw;
+    min-height: 812px;
+    height: 100vh;
 }
+
 
 .container {
   max-width: 250px;
