--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-  background: url(images/Mobile.png);
+  background: url(images/Mobile.png) no -repeat center/cover;
     width: 100vw;
     min-height: 812px;
     height: 100vh;
